2003-10-29  Stipe Tolj  <tolj@wapme-systems.de>
    * configure[.in]: added checking of POSIX.1 regex functions and header
      files availibility on the system.
    * gwlib/gwlib.h: added inclusion of gwlib/regex.h
    * gwlib/regex.[ch]: added POSIX regular expression support, including
      substitution routine for passing subexpression matches to the result.
      This needs some more improvement, but looks good now.
    * test/test_regex.c: test program for the gwlib/regex.[ch] module. Try
      $ ./test/test_regex "+4914287756" "^(00|\+)([0-9]{6,20})$" "\$2"
      for a quick test on how to substitute an prefixed + MSISDN with the
      regex into the subexpression part two.

2003-10-28  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_emi.c: fixed billing identifier handling. We have to 
      convert the binary information received from smsbox to hex for
      the EMI XSer 0c representation.

2003-10-27  Stipe Tolj  <tolj@wapme-systems.de>
    * wap/cookies.c: fixed BUG#95 causing wapbox to crash while comparing 
      cookies octstr_compare(). 

2003-10-27  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bb_http.c: small bug fix. Allow http admin commands w/o /cgi-bin/ prefix
      (e.g. /status).

2003-10-26  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bearerbox.c: applied patch that should fix bearerbox signal handling.
      Otherwise is a deadlock possible while signal arrived. For more details see
      Msg-Id: <200310130000.34055.a.malysh@centrium.de>

2003-10-26  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bb_http.c: cleanup and harmonization of http admin commands.

2003-10-24  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/conn.c: added check for NULL pointer callback function.
    * gwlib/http.c: call conn_unregister(conn) before destroing HTTPClient.

2003-10-22  Alexander Malysh  <a.malysh@centrium.de>
    * gw/wml_compiler.c: fixed possible segfault if wml document doesn't contain