@@ -1,3 +1,11 @@
+2003-10-30  Stipe Tolj  <tolj@wapme-systems.de>
+	* gwlib/regex.[ch]: made regex functions display calling function in case
+	  of error. This is usefully for later debugging purposes. Added functions
+	  gw_regex_[match|subst]_[pre]() for simple matchin and substituion
+	  operations on Octstr. Either passing the RE in plain text or as 
+	  pre-compiled structure.
+	* test/test_regex.c: added wrapper functions testing.
+
 2003-10-29  Stipe Tolj  <tolj@wapme-systems.de>
     * configure[.in]: added checking of POSIX.1 regex functions and header
       files availibility on the system.
